# backend

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: proto-drift-check.yml
components/admin/: Dockerfile  pyproject.toml
components/admin/alembic/: env.py
components/admin/alembic/versions/: 4fc01a0e27c2_init_tables.py  7c4a6b4f3d1e_add_admin_foundation_tables.py  a94f2d8c1b7e_phase2_user_governance_tables.py  c5d4e8a1b2f9_phase5_system_configuration_tables.py  d2102f6ab9b1_initial_tables.py  d6e7f8a9b1c2_phase6_report_job_export_format.py  e1f9b37c8a42_phase3_dispute_command_center_tables.py  f3a1d9b2c4e7_phase4_payout_financial_ops_tables.py
components/admin/app/: api.py  db.py  grpc_clients.py  grpc_server.py  logging_config.py  main.py  models.py  permissions.py  repository.py  service.py
components/admin/proto/: audit_pb2.py  audit_pb2_grpc.py  escrow_pb2.py  fee_pb2_grpc.py  payout_pb2.py  payout_pb2_grpc.py
components/admin/tests/: conftest.py
components/admin/tests/integration/: test_routes.py
components/admin/tests/unit/: test_fee_policy.py  test_logging_config.py  test_permissions.py  test_proto_contract.py
components/audit/: pyproject.toml
components/audit/alembic/: env.py
components/audit/app/: api.py  db.py  grpc_clients.py  grpc_server.py  main.py  models.py  repository.py  service.py
components/audit/tests/: conftest.py
components/auth/: Dockerfile  pyproject.toml
components/auth/alembic/: env.py
components/auth/app/: api.py  db.py  grpc_clients.py  grpc_server.py  logging_config.py  main.py  messaging.py  models.py  redis_client.py  repository.py  security.py  service.py
components/auth/proto/: auth_pb2_grpc.py
components/auth/scripts/: create_admin.py
components/auth/tests/: conftest.py
components/dispute/: Dockerfile  pyproject.toml
components/dispute/alembic/: env.py
components/dispute/app/: api.py  db.py  grpc_clients.py  grpc_server.py  main.py  messaging.py  models.py  repository.py  service.py
components/dispute/proto/: dispute_pb2.py  dispute_pb2_grpc.py  escrow_pb2_grpc.py
components/dispute/tests/: conftest.py
components/escrow/: ESCROW_STATE_TRANSITIONS.md  ESCROW_STATE_TRANSITIONS_V3.md  pyproject.toml
components/escrow/alembic/: env.py
components/escrow/app/: api.py  db.py  grpc_clients.py  grpc_server.py  logging_config.py  main.py  messaging.py  models.py  repository.py  service.py  settings.py
components/escrow/proto/: fee_pb2_grpc.py
components/escrow/tests/: conftest.py
components/fee/: Dockerfile  pyproject.toml
components/fee/alembic/: env.py
components/fee/app/: api.py  db.py  grpc_client.py  grpc_server.py  main.py  models.py  repository.py  service.py  settings.py
components/fee/proto/: admin_pb2.py  admin_pb2_grpc.py  fee_pb2.py
components/fee/tests/: conftest.py
components/kyc/: Dockerfile  kyc_test.db  pyproject.toml
components/notification/: pyproject.toml
components/organization/: Dockerfile  pyproject.toml
components/payment_provider/: pyproject.toml
components/payment_provider/app/: api.py  grpc_clients.py  grpc_server.py  main.py  models.py  service.py
components/payment_provider/proto/: payment_provider_pb2.py
components/payment_provider/tests/: conftest.py
components/payment_provider/tests/integration/: test_routes.py  test_transfer_routes.py
components/payment_provider/tests/unit/: test_service.py
components/payout/: Dockerfile  pyproject.toml
components/storage/: Dockerfile  pyproject.toml
components/storage/app/: api.py  config.py  grpc_server.py  main.py  service.py
components/storage/proto/: storage_pb2_grpc.py
components/storage/tests/unit/: test_service.py
components/user/: Dockerfile  pyproject.toml
components/wallet/: Dockerfile  pyproject.toml
components/wallet/alembic/: env.py
components/wallet/alembic/versions/: 34e1e3d8283a_added_provider_col_to_transaction_table.py  adc6396c6c4d_initial_tables.py  b7a1d2e6f9c3_add_wallet_locks_table.py  e1fe098c2afe_init_tables.py
components/wallet/app/: api.py  db.py  grpc_clients.py  grpc_server.py  main.py  messaging.py  models.py  repository.py  service.py
components/wallet/proto/: wallet_pb2_grpc.py
components/wallet/tests/: conftest.py
components/wallet/tests/integration/: test_routes.py
components/wallet/tests/unit/: test_messaging.py  test_service.py
components/webhook/: pyproject.toml
components/workers/: Dockerfile  pyproject.toml
components/workers/app/: celery_app.py  main.py
components/workers/app/tasks/: dispute_tasks.py  email_tasks.py  escrow_tasks.py  payout_tasks.py  recurring_tasks.py  webhook_tasks.py
components/workers/app/templates/email/: base.html  dispute_opened.html  dispute_resolved.html  escrow_completed.html  escrow_funded.html  escrow_invite_countered.html  escrow_invite_expired.html  escrow_invite_received.html  escrow_invite_rejected.html  escrow_invite_responded.html  generic_notification.html  invoice_paid.html  otp_resent.html  password_reset_requested.html  payout_failed.html  payout_success.html  user_registered.html
components/workers/tests/: conftest.py
components/workers/tests/integration/: test_tasks_integration.py
components/workers/tests/unit/: test_tasks.py
gateway/: Dockerfile  pyproject.toml
gateway/app/: main.py
gateway/tests/: test_kyc_environment.py  test_main.py
postman/: EthiTrust_Complete_API_Collection.json  admin.postman_collection.json  auth.postman_collection.json  dispute.postman_collection.json  escrow.postman_collection.json  kyc.postman_collection.json  notification.postman_collection.json  organization.postman_collection.json  payout.postman_collection.json  user.postman_collection.json  wallet.postman_collection.json
proto/: admin.proto  audit.proto  auth.proto  dispute.proto  escrow.proto  fee.proto  notification.proto  organization.proto  payment_provider.proto  payout.proto  storage.proto  user.proto  wallet.proto
scripts/: create_databases.sh  create_migration.ps1  generate_protos.py  generate_protos.sh
(+134 files in other folders)
