[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ethitrust-backend"
version = "0.1.0"
description = "Ethitrust modular monolith backend - migrated from microservices"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.18.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.6",
    
    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    
    # RabbitMQ
    "aio-pika>=8.0.0",
    
    # Redis (caching + Celery)
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    "celery>=5.3.0",
    
    # Storage (S3/R2)
    "boto3>=1.28.0",
    "aioboto3>=12.0.0",
    
    # HTTP
    "httpx>=0.24.0",
    "aiohttp>=3.9.0",
    
    # Email
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    
    # Logging & Monitoring
    "python-json-logger>=2.0.0",
    "sentry-sdk>=1.38.0",
    
    # Utilities
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.24.0",
    
    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pylint>=2.17.0",
    
    # Development tools
    "ipython>=8.15.0",
    "ipdb>=0.13.13",
    "debugpy>=1.6.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "shared", "api", "modules", "main.py"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [".venv"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_untyped_calls = false
ignore_missing_imports = true
exclude = [".venv", "build"]

[[tool.mypy.overrides]]
module = "aio_pika.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["modules/*/tests", "tests"]
addopts = [
    "--strict-markers",
    "--cov=core",
    "--cov=shared",
    "--cov=api",
    "--cov=modules",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow",
]

[tool.coverage.run]
branch = true
source = ["core", "shared", "api", "modules"]
omit = [
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
