[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethitrust-admin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic[email]==2.9.2",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "grpcio==1.78.0",
    "protobuf==6.33.5",
    "PyJWT==2.9.0",
    "httpx==0.27.2",
    "alembic>=1.13.0"
]

[project.optional-dependencies]
test = ["pytest==8.3.3","pytest-asyncio==0.24.0","httpx==0.27.2","aiosqlite==0.20.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "proto*"]
exclude = ["tests*", "alembic*"]
