[project]
name = "ethitrust-payment-provider"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.5.2",
    "grpcio==1.78.0",
    "grpcio-tools==1.78.0",
    "protobuf==6.33.5",
    "httpx==0.27.2",
    "stripe==10.8.0",
    "alembic>=1.13.0"
]

[project.optional-dependencies]
test = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "respx==0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
