[project]
name = "ethitrust-storage"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "boto3==1.35.36",
    "grpcio==1.78.0",
    "grpcio-tools==1.78.0",
    "protobuf==6.31.1",
    "alembic>=1.13.0"
]

[project.optional-dependencies]
test = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
