[project]
name = "ethitrust-workers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]==5.4.0",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "pydantic-settings==2.5.2",
    "redis[asyncio]==5.1.0",
    "aio-pika==9.4.3",
    "httpx==0.27.2",
    "PyJWT==2.9.0",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "Jinja2==3.1.4",
    "alembic>=1.13.0"
]
[project.optional-dependencies]
test = ["pytest==8.3.3","pytest-asyncio==0.24.0","httpx==0.27.2","aiosqlite==0.20.0"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
